# research-mcp

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.claude/: settings.local.json
docs/superpowers/specs/: 2026-04-03-research-mcp-design.md
src/research_mcp/: __init__.py  __main__.py  cache.py  config.py  server.py
src/research_mcp/clients/: __init__.py  arxiv.py  biorxiv.py  core_api.py  crossref.py  dblp.py  doaj.py  docling.py  europepmc.py  github.py  hackernews.py  http.py  ollama.py  openalex.py  pdf.py  pmc.py  pubmed.py  scrapling_client.py  searxng.py  semantic_scholar.py  stackexchange.py  unpaywall.py  whisper.py  wikidata_client.py  wikipedia.py  youtube.py
src/research_mcp/models/: __init__.py  academic.py  document.py  index.py  search.py  video.py
src/research_mcp/services/: __init__.py  academic_search.py  document.py  forums.py  github_docs.py  scraper.py  vector_index.py  video.py  web_search.py  wiki.py
src/research_mcp/tools/: __init__.py  academic.py  document.py  github_docs.py  index.py  video.py  web.py  wiki.py
