[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-mcp"
version = "0.1.0"
description = "A self-hosted MCP server for research workflows: web search, academic papers, YouTube transcripts, GitHub/docs, document extraction, Wikipedia, and local vector index."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"

dependencies = [
    "fastmcp>=3.0,<4.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
web = [
    "scrapling>=0.2",
    "markdownify>=0.14",
]
video = [
    "youtube-transcript-api>=1.0",
    "yt-dlp>=2024.0",
]
whisper = [
    "faster-whisper>=1.0",
]
pdf = [
    "pymupdf4llm>=0.0.17",
]
index = [
    "sqlite-vec>=0.1",
]
all = [
    "research-mcp[web,video,pdf,index]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "ruff>=0.8",
]

[project.scripts]
research-mcp = "research_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/research_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
